# blockgame

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
BlockGame/: CMakeLists.txt
BlockGame/Shaders/: compile.sh  crosshair.vert  frag.spv  highlight.vert  shader.frag  shader.vert  terrain.frag  terrain.vert  vert.spv
BlockGame/Src/: BlockHighlighter.cpp  BlockHighlighter.hpp  BlockRegistry.cpp  BlockRegistry.hpp  BlockTypes.hpp  Camera.cpp  Camera.hpp  ChunkMesh.cpp  ChunkMesh.h  ChunkMesher.cpp  ChunkMesher.hpp  ChunkMeshes.cpp  ChunkMeshes.hpp  ChunkStreamer.cpp  ChunkStreamer.hpp  Crosshair.cpp  Crosshair.hpp  GameLayer.cpp  GameLayer.hpp  Grid3D.hpp  Highlight.cpp  Highlight.hpp  Map.cpp  Map.hpp  MapMesh.cpp  MapMesh.hpp  RenderItem.hpp  TextureRegistry.cpp  TextureRegistry.hpp  WorldGenerator.cpp  WorldGenerator.hpp  main.cpp
BlockGame/Src/Containers/: ThreadSafeQueue.hpp
BlockGame/Src/World/: Chunk.hpp  ChunkMesher.cpp  ChunkMesher.hpp  ChunkStreamer.cpp  ChunkStreamer.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp  WorldStore.cpp  WorldStore.hpp
Engine/: CMakeLists.txt
Engine/Src/Engine/: Application.cpp  Application.hpp  Fatal.hpp  IEvent.hpp  ILayer.hpp  Window.cpp  Window.hpp
Engine/Src/Engine/Assets/: File.cpp  File.hpp  ImageLoader.cpp  ImageLoader.hpp
Engine/Src/Engine/Containers/: BufferUtil.hpp  HandlePool.hpp  SparseBuffer.cpp  SparseBuffer.hpp
Engine/Src/Engine/Core/Containers/: HandlePool.hpp
Engine/Src/Engine/Events/: Events.hpp  IEventHandler.hpp  IEventRaiser.hpp
Engine/Src/Engine/GFX/: Mesh.hpp  RenderObject.cpp  RenderObject.hpp  TileGroup.cpp  TileGroup.hpp
Engine/Src/Engine/GFX/Vulkan/: VulkanCommand.cpp  VulkanCommand.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanPipelineCache.cpp  VulkanPipelineCache.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanSync.cpp  VulkanSync.hpp
Engine/Src/Engine/Graphics/: Camera.cpp  Camera.h  CameraMatrices.hpp  Color.hpp  Handles.hpp  Mesh.hpp  MeshCreateInfo.hpp  ObjectPushConstants.hpp  PipelineCreateInfo.hpp  RenderObject.cpp  RenderObject.hpp  SubmitInfo.hpp  TextureArrayBuilder.cpp  TextureArrayBuilder.hpp  TextureArrayInfo.hpp
Engine/Src/Engine/Graphics/Resources/: TextureArrayBuilder.cpp  TextureArrayBuilder.hpp  TextureArrayInfo.hpp  TextureLoader.cpp  TextureLoader.hpp
Engine/Src/Engine/Graphics/Vulkan/: CheckVk.hpp  Command.cpp  Command.hpp  Config.hpp  Context.cpp  Context.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  Device.cpp  Device.hpp  FramebufferSet.cpp  FramebufferSet.hpp  Image.cpp  Image.hpp  ImageUtil.cpp  ImageUtil.hpp  MeshAllocator.cpp  MeshAllocator.hpp  MeshBuffer.cpp  MeshBuffer.hpp  MeshGPU.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.cpp  PipelineCache.hpp  RenderPass.cpp  RenderPass.hpp  RenderPassCache.cpp  RenderPassCache.hpp  Renderer.cpp  Renderer.hpp  ShaderDataAllocator.cpp  ShaderDataAllocator.hpp  StagingBuffer.cpp  StagingBuffer.hpp  SwapChain.cpp  SwapChain.hpp  Sync.cpp  Sync.hpp  TextureAllocator.cpp  (+6 more)
Engine/Src/Engine/Math/: Frustum.cpp  Frustum.hpp  Vec3Int.hpp
Engine/Src/Engine/Memory/: Alignment.hpp  RingBuffer.cpp  RingBuffer.hpp  SparseBuffer.cpp  SparseBuffer.hpp
Engine/Src/Engine/Renderer/: TileGroup.cpp  VulkanCommand.cpp  VulkanCommand.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanPipeline.cpp  VulkanPipelineLibrary.cpp  VulkanPipelineLibrary.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapChain.cpp  VulkanSync.hpp
Engine/Tests/: CMakeLists.txt
Engine/Tests/Containers/: SparseBufferTest.cpp
Engine/Tests/Memory/: RingBufferTest.cpp  SparseBufferTest.cpp
